first draft of class diagram

--- a/misc/class_diagram.tex
+++ b/misc/class_diagram.tex
@@ -10,19 +10,13 @@
 \DeclareGraphicsRule{*}{mps}{*}{}
 \fi
 
-\title{A Minimal Example for MetaUML}
-\author{Craig Kelly \footnote{adapted from John Hacker's original example} }
+\title{Quizzee Class Diagram for COMP7012}
+\author{Team Q, prepared by Craig Kelly}
 \begin{document}
 
 \maketitle
 
-\section{Intro}
-
-This is a simple MetaUML demo taken in part from the manual and in
-part from the FAQ.  Note that this file is going to depend on mpost
-being run on example.mp.
-
-\section{Class Diagram Example}
+\section{Class Diagram}
 
 \includegraphics{class_diagram.1}
 
