--- a/misc/class_diagram.tex
+++ b/misc/class_diagram.tex
@@ -11,7 +11,7 @@
 \fi
 
 \title{Quizzee Class Diagram for COMP7012}
-\author{Team Q, prepared by Craig Kelly}
+\author{Team Q, prepared by Pulin Agrawal}
 \begin{document}
 
 \maketitle
